# GameBot4Fun

./: .env.exemple  .gitignore  Cargo.toml  README.md  database.sqlite  sqlx-data.json
migrations/: 202304251131_tips_migration.sql
src/: database.rs  logger.rs  main.rs  utils.rs
src/commands/: mod.rs
src/commands/tips/: create.rs  delete.rs  list.rs  mod.rs  read.rs  update.rs
src/commands/tips_scheduler/: config.rs  mod.rs  scheduler.rs
