[package]
name = "GameBot4Fun"
version = "0.0.1"
authors = ["Lucas Guichard<lucasguichard@konekan.fr>"]
edition = "2021"

[profile.release]
debug = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version ="1.25.0", features = ["full"]}

[dependencies.serenity]
default-features = false
features = ["client", "gateway", "model", "rustls_backend"]
version = "0.11.5"